# Lin_alg_Viterbi

./: CMakeLists.txt  GraphBLAS_manager.cpp  GraphBLAS_manager.h  HMM.h  HMM_reader.cpp  HMM_reader.h  LA_Viterbi.cpp  LA_Viterbi.h  LA_Viterbi_assoc_spec.cpp  LA_Viterbi_assoc_spec.h  LA_Viterbi_spec.cpp  LA_Viterbi_spec.h  README.md  benchmark_helper.h  build.sh  data_reader.cpp  data_reader.h  main.cpp  run.sh  run_tests.sh
chmm_files/: chmm_gen.py  random_1001_3003_20_2.chmm  random_100_300_20_2.chmm  random_1100_3300_20_2.chmm  random_1200_3600_20_2.chmm  random_1301_3903_20_2.chmm  random_1400_4200_20_2.chmm  random_1509_4527_20_2.chmm  random_1600_4800_20_2.chmm  random_1705_5115_20_2.chmm  random_1799_5397_20_2.chmm  random_1901_5703_20_2.chmm  random_200_600_20_2.chmm  random_2050_6150_20_2.chmm  random_2138_6414_20_2.chmm  random_2207_6621_20_2.chmm  random_2365_7095_20_2.chmm  random_2405_7215_20_2.chmm  random_300_900_20_2.chmm  random_400_1200_20_2.chmm  random_500_1500_20_2.chmm  random_600_1800_20_2.chmm  random_700_2100_20_2.chmm  random_800_2400_20_2.chmm  random_900_2700_20_2.chmm  test_chmm.chmm
ess_files/: emit_3_3500_20.ess  ess_gen.py  fasta_to_ess.py
tests/: CMakeLists.txt  test_HMM_reader.cpp  test_LA_Viterbi.cpp  test_LA_Viterbi_assoc_spec.cpp  test_LA_Viterbi_spec.cpp  test_chmm_reader.cpp  test_ess_reader.cpp  test_semantic_equality.cpp
